--- a/frontend/apps/web-portal/src/app/features/community/community-my-profile.page.scss
+++ b/frontend/apps/web-portal/src/app/features/community/community-my-profile.page.scss
@@ -438,7 +438,9 @@ $font:  'Helvetica Neue LT Arabic', 'Cairo', sans-serif;
 .cmp__search-input {
   width: 100%;
   height: 64px;
-  padding: 8px 52px 8px 48px;
+  padding-block: 8px;
+  padding-inline-start: 16px;
+  padding-inline-end: 76px;
   background: var(--white);
   border: none;
   font-size: 18px;
@@ -453,7 +455,7 @@ $font:  'Helvetica Neue LT Arabic', 'Cairo', sans-serif;
 
 .cmp__search-clear {
   position: absolute;
-  inset-inline-start: 16px;
+  inset-inline-end: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
